--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # requirements.txt
-st-supabase-connection==2.0.1
+st-supabase-connection>=2.1.3
 plotly_express==0.4.1
 pandas==2.2.3
 streamlit_autorefresh==1.0.1
